<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_city"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/units_deg_c"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toTopOf="@id/iv_icon" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/units_pressure"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="@id/tv_temp"
            app:layout_constraintStart_toEndOf="@id/tv_temp"
            app:layout_constraintTop_toTopOf="@id/tv_temp" />

        <TextView
            android:id="@+id/tv_wind_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_wind_deg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="@id/tv_temp"
            app:layout_constraintTop_toBottomOf="@id/tv_temp" />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units_wind_speed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toEndOf="@id/tv_wind_deg"
            app:layout_constraintTop_toTopOf="@id/tv_wind_deg"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_humidity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="@id/tv_temp"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_deg" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_update"
            app:layout_constraintEnd_toStartOf="@id/btn_update"
            android:layout_marginEnd="8dp"
            android:hint="Введите город"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Обновить"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>